# claude-code-manage

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  paths.rs
src-tauri/src/model/: mod.rs
src-tauri/src/services/: fs_write.rs  mod.rs  project_list.rs  scanner.rs  search.rs  watcher.rs
src/components/: CodeEditor.tsx  CommandPalette.tsx  Dialog.tsx  ErrorBoundary.tsx  InnerSidebar.tsx  NewEntryDialog.tsx  Rail.tsx  Toast.tsx  Topbar.tsx
src/components/workspace/: ShEditor.tsx  TabbedConfigShell.tsx  Workspace.tsx
src/data/: commands.ts  mock.ts
src/lib/: entry-templates.ts  fs-bridge.ts  hooks-schema.ts  mcp-schema.ts  permissions-schema.ts  settings-schema.ts
src/screens/: Catalog.tsx  Dashboard.tsx  EntryDetailScreen.tsx  FileEditorScreen.tsx  GlobalConfig.tsx  HooksScreen.tsx  KeybindingsScreen.tsx  McpEditorScreen.tsx  MemoryScreen.tsx  PermissionsScreen.tsx  ProjectDetail.tsx  Settings.tsx  SettingsFormScreen.tsx  SkillDetailScreen.tsx  UserMcpScreen.tsx
src/screens/mcp/: McpIntro.tsx  McpServerForm.tsx  McpVisual.tsx
src/store/: app-store.ts  config-store.ts  workspace-store.ts
